--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "gatsby-source-filesystem": "^2.7.0",
         "gatsby-transformer-remark": "^2.12.0",
         "react": "^16.12.0",
-        "react-dom": "^16.12.0"
+        "react-dom": "^16.12.0",
+        "sass": "^1.37.5"
     },
     "devDependencies": {
         "prettier": "2.1.2"
